# search

./: .gitignore  README.md  get_content.py  pyproject.toml  scrapping_test.py  search.py  test_library.py
src/web/: scrap.py  search.py  utils.py
