[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inscriptis>=2.6.0",
    "loguru>=0.7.3",
    "playwright>=1.52.0",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
]

[project.scripts]
web = "web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
